# omni-midi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default_config.yaml  pi_config.yaml
src/: Config.cpp  Config.h  main.cpp
src/UI/: Button.cpp  Button.h  Harp.cpp  Harp.h  Sprite.cpp  Sprite.h  TextArea.cpp  TextArea.h  Window.cpp  Window.h  WindowArea.h
src/controller/: ChordController.cpp  ChordController.h  Controller.h  GhController.cpp  GhController.h  MidiControl.cpp  MidiControl.h  MidiController.cpp  MidiController.h  OmniController.cpp  OmniController.h
src/device/: Device.h  GhDevice.cpp  GhDevice.h  OmniDevice.cpp  OmniDevice.h
src/input/: Input.h  KeyboardInput.cpp  KeyboardInput.h  TouchInput.cpp  TouchInput.h
